pushing v0.6.1
